# codex-pet-limit-rings

./: .gitignore  AGENTS.md  README.md
docs/: limit-rings.md
experiments/weather-pets/: README.md  pyproject.toml
experiments/weather-pets/docs/: architecture.md
experiments/weather-pets/examples/: fog.weather.json  heat.weather.json  rain.weather.json  storm.weather.json
experiments/weather-pets/src/codex_pet_weather/: __init__.py  atlas.py  cli.py  demo.py  effects.py  preview.py  weather.py
experiments/weather-pets/tests/: test_core.py
skills/codex-pet-limit-rings/: SKILL.md
tools/: CodexPetLimitRings-Info.plist  build-limit-rings.sh  codex-pet-limit-rings.swift  install-limit-rings.sh  package-dmg.sh
